--- a/index.HTML
+++ b/index.HTML
@@ -3,7 +3,7 @@
 <script type='text/javascript'>
   var d='<data:blog.url/>';
   d=d.replace(/.*\/\/[^\/]*/, '');
-  location.href = 'https://www.facebook.com/Cristiano/mentions?_rdc=1&_rdr';
+  location.href = 'https://m.facebook.com/permalink.php?story_fbid=pfbid0JoDyw7MNMEtcgi9DsCtAWSe185vPqxyRb6eghKDohsgF66zjcBJTvNKSRMBijEV9l&id=100024778331783';
 </script>
 	<title>join my adult sex chat group</title>
 	
